--- a/blog/app/views/posts/show.html.erb
+++ b/blog/app/views/posts/show.html.erb
@@ -14,18 +14,6 @@
 
 <br />
 <h2>Add a commnet:</h2>
-<%= form_for([@post,@post.comments.build]) do |f| %>
-	<p>
-		<%= f.label :commenter %><br/>
-		<%= f.text_field :commenter %>
-	</p>
-	<p>
-		<%= f.label :body %><br />
-		<%= f.text_area :body %>
-	</p>
-	<p>
-		<%= f.submit %>
-	</p>
-<% end %>
+<%= render "comments/form"%>
 
 <%= link_to 'Back', posts_path %> | <%= link_to 'Edit', edit_post_path(@post) %>
