--- a/blog/app/views/posts/edit.html.erb
+++ b/blog/app/views/posts/edit.html.erb
@@ -1,6 +1,17 @@
-<h1>Editing post</h1>
- 
-<%= render 'form' %>
-<br/>
- 
-<%= link_to 'Back', posts_path %>
+<div class="row">
+	<div class ="col-md-4 col-md-offset-4">
+		<div class="panel panel-default panel-primary">
+			<div class="panel-heading ">
+				<h1>Editing Post</h1>
+			</div>
+			<div class="panel-body">
+				<%= render 'form' %>
+				<br/>
+			</div>
+			<div class="panel-footer">
+				<%= link_to 'Back', posts_path %>
+			</div>
+		</div>
+	</div>
+</div>
+
