--- a/blog/app/views/posts/index.html.erb
+++ b/blog/app/views/posts/index.html.erb
@@ -1,22 +1,25 @@
 <h1>Listing posts</h1>
- 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-    <th></th>
-    <th></th>
-  </tr>
- 
+<div class = "row">
+	<div class = "col-md-2">
+		Title
+	</div>
+	<div class = "col-md-2">
+		Text
+	</div>
+	<div class = "col-md-2">
+		
+	</div>
+</div>
 <% @posts.each do |post| %>
-  <tr>
-    <td><%= post.title %></td>
-    <td><%= post.text %></td>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post_path(post),
-                    method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
+<div class = "row">
+		<div class = "col-md-2"><%= post.title %></div>
+		<div class = "col-md-2"><%= post.text %></div>
+		<div class = "col-md-1"><%= link_to 'Show', post %></div>
+		<div class = "col-md-1"><%= link_to 'Edit', edit_post_path(post) %></div>
+		<div class = "col-md-1"><%= link_to 'Destroy', post_path(post),
+		method: :delete, data: { confirm: 'Are you sure?' } %></div>
+		<div class = "col-md-1"></div>
+</div>
 <% end %>
-</table>
+
 <%= link_to 'New post', new_post_path %>
