--- a/blog/app/views/posts/index.html.erb
+++ b/blog/app/views/posts/index.html.erb
@@ -1,25 +1,34 @@
 <h1>Listing posts</h1>
-<div class = "row">
-	<div class = "col-md-2">
-		Title
-	</div>
-	<div class = "col-md-2">
-		Text
-	</div>
-	<div class = "col-md-2">
-		
-	</div>
-</div>
-<% @posts.each do |post| %>
-<div class = "row">
-		<div class = "col-md-2"><%= post.title %></div>
-		<div class = "col-md-2"><%= post.text %></div>
-		<div class = "col-md-1"><%= link_to 'Show', post %></div>
-		<div class = "col-md-1"><%= link_to 'Edit', edit_post_path(post) %></div>
-		<div class = "col-md-1"><%= link_to 'Destroy', post_path(post),
-		method: :delete, data: { confirm: 'Are you sure?' } %></div>
-		<div class = "col-md-1"></div>
-</div>
-<% end %>
 
-<%= link_to 'New post', new_post_path %>
+<div class = "row">
+	<% @posts.each do |post| %>
+
+	<div class="col-md-6 col-md-offset-3">
+		<div class="panel panel-default">
+
+			<div class ="panel-body">
+				<div class = "row">
+					<div class="col-md-8">
+						<strong>Title: </strong><%= post.title %></br> <strong>Text: </strong><%= post.text %>
+					</div>
+					<div class="col-md-3 col-md-offset-1">
+						<div class="thumbnail"></div>
+						</div>
+				</div>
+			</div>
+
+			<div class = "panel-footer">
+				<%= link_to 'Show ', post %>|
+
+				<%= link_to 'Edit ', edit_post_path(post) %>|
+
+				<%= link_to 'Destroy', post_path(post),
+				method: :delete, data: { confirm: 'Are you sure?' } %>
+			</div>
+		</div>
+	</div>
+	<% end %>
+	<div class="col-md-6 col-md-offset-3">
+		<%= link_to 'New post', new_post_path %>
+	</div>
+</div>
