--- a/blog/app/views/posts/_form.html.erb
+++ b/blog/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post do |f| %>
+<%= form_for @post,:html => { :multipart => true } do |f| %>
   <% if @post.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@post.errors.count, "error") %> prohibited
@@ -18,6 +18,11 @@
   <p>
     <%= f.label :text %><br>
     <%= f.text_area :text %>
+  </p>
+  
+  <p>
+  	<%= f.label :photo %><br>
+    <%= f.file_field :photo %>
   </p>
  
   <p>
