--- a/blog/app/views/posts/index.html.erb
+++ b/blog/app/views/posts/index.html.erb
@@ -1,3 +1,10 @@
+<script>
+	$(document).ready(function() {
+		$('a img').click(function() {
+			$('#body-image img').attr('src', $(this).attr('src'));
+		})
+	}); 
+</script>
 <h1>Listing posts</h1>
 
 <div class = "row">
@@ -5,15 +12,16 @@
 
 	<div class="col-md-6 col-md-offset-3">
 		<div class="panel panel-default">
-
 			<div class ="panel-body">
 				<div class = "row">
 					<div class="col-md-8">
 						<strong>Title: </strong><%= post.title %></br> <strong>Text: </strong><%= post.text %>
 					</div>
 					<div class="col-md-3 col-md-offset-1">
-						<div class="thumbnail"></div>
+						<div class="thumbnail">
+							<span class="btn-group"> <a id="image-thumb" href="#test_modal" data-toggle="modal"> <%= image_tag(post.photo.url) %></a> </span>
 						</div>
+					</div>
 				</div>
 			</div>
 
@@ -26,6 +34,19 @@
 				method: :delete, data: { confirm: 'Are you sure?' } %>
 			</div>
 		</div>
+	</div>
+	<div class="modal fade" id="test_modal">
+		<div class= "modal-dialog">
+			<div class="modal-content">
+				<div class="modal-body" id="body-image">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+						&times;
+					</button>
+					<%= image_tag(post.photo.url(:original))%>
+				</div>
+			</div>
+		</div>
+
 	</div>
 	<% end %>
 	<div class="col-md-6 col-md-offset-3">
