--- a/blog/app/views/posts/index.html.erb
+++ b/blog/app/views/posts/index.html.erb
@@ -1,55 +1,28 @@
 <script>
 	$(document).ready(function() {
-		$('a img').click(function() {
-			$('#body-image img').attr('src', $(this).attr('src'));
-		})
-	}); 
+$('a img').click(function() {
+$('#body-image img').attr('src', $(this).attr('src'));
+})
+$("#action-1").click(function(e){
+      $("#render").html("<%= escape_javascript( render(:partial => "listposts")) %>
+	");
+	});
+
+	});
 </script>
+
 <h1>Listing posts</h1>
+<div class="dropdown">
+	<a id="dLabel" role="button" data-toggle="dropdown" data-target="#" href="/page.html"> Dropdown <span class="caret"></span> </a>
 
-<div class = "row">
-	<% @posts.each do |post| %>
+	<ul class="dropdown-menu">
+		<li>
+			<%= link_to 'ordenar', posts_orderby_path, method: :orderby %>
+		</li>
+		<li class="divider"></li>
+	</ul>
+</div>
 
-	<div class="col-md-6 col-md-offset-3">
-		<div class="panel panel-default">
-			<div class ="panel-body">
-				<div class = "row">
-					<div class="col-md-8">
-						<strong>Title: </strong><%= post.title %></br> <strong>Text: </strong><%= post.text %>
-					</div>
-					<div class="col-md-3 col-md-offset-1">
-						<div class="thumbnail">
-							<span class="btn-group"> <a id="image-thumb" href="#test_modal" data-toggle="modal"> <%= image_tag(post.photo.url) %></a> </span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class = "panel-footer">
-				<%= link_to 'Show ', post %>|
-
-				<%= link_to 'Edit ', edit_post_path(post) %>|
-
-				<%= link_to 'Destroy', post_path(post),
-				method: :delete, data: { confirm: 'Are you sure?' } %>
-			</div>
-		</div>
-	</div>
-	<div class="modal fade" id="test_modal">
-		<div class= "modal-dialog">
-			<div class="modal-content">
-				<div class="modal-body" id="body-image">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-						&times;
-					</button>
-					<%= image_tag(post.photo.url(:original))%>
-				</div>
-			</div>
-		</div>
-
-	</div>
-	<% end %>
-	<div class="col-md-6 col-md-offset-3">
-		<%= link_to 'New post', new_post_path %>
-	</div>
+<div id="render">
+<%= render "listposts" %>
 </div>
